@@ -15,7 +15,7 @@ public class TaskVariables extends PlaceholderExpansion {
 
     @Override
     public @NotNull String getIdentifier() {
-        return "SJTask";
+        return "SXTask";
     }
 
     @Override
@@ -33,31 +33,35 @@ public class TaskVariables extends PlaceholderExpansion {
         if (offlinePlayer == null) return "不存在的玩家";
         Task task = taskRepository.findByTaskTeamPlayerUuid(offlinePlayer.getUniqueId());
         if (task == null) return "暂无任务";
-        if (params.equalsIgnoreCase("wheat")) {
-            return String.format("%.1f", task.getTaskWheat());
+        switch (params.toLowerCase()) {
+            case "wheat" -> {
+                return String.format("%.1f", task.getTaskWheat());
+            }
+            case "wheat_loss_per_sec" -> {
+                return String.format("%.1f", task.getWheatLossPerSecNow());
+            }
+            case "team_size" -> {
+                return task.size() + "人";
+            }
+            case "detail_wheat" -> {
+                double value = task.getTaskStat().getWheatChange();
+                if (value > 0) return "§f%.1f§a(+%.1f)".formatted(task.getTaskWheat(), value);
+                else if (value < 0) return "§f%.1f§c(%.1f)".formatted(task.getTaskWheat(), value);
+                else return "§f%.1f".formatted(task.getTaskWheat());
+            }
+            case "stage" -> {
+                return task.getStageHolder().getThisStage().getDisplayName();
+            }
+            case "difficulty" -> {
+                return task.getTaskDifficulty().getColor() + task.getTaskDifficulty().getName();
+            }
+            case "evacuable" -> {
+                if (task.getAvailableEvacuationZone() != null) return "§a可撤离";
+                else return "§c无法撤离";
+            }
+            default -> {
+                return "没做完呢";
+            }
         }
-        if (params.equalsIgnoreCase("wheat_loss_per_sec")) {
-            return String.format("%.1f", task.getWheatLossPerSecNow());
-        }
-        if (params.equalsIgnoreCase("team_size")) {
-            return task.size()+"人";
-        }
-        if (params.equalsIgnoreCase("detail_wheat")) {
-            double value = task.getTaskStat().getWheatChange();
-            if (value > 0) return "§f%.1f§a(+%.1f)".formatted(task.getTaskWheat(), value);
-            else if (value < 0) return "§f%.1f§c(%.1f)".formatted(task.getTaskWheat(), value);
-            else return "§f%.1f".formatted(task.getTaskWheat());
-        }
-        if (params.equalsIgnoreCase("stage")) {
-            return task.getStageHolder().getThisStage().getDisplayName();
-        }
-        if (params.equalsIgnoreCase("difficulty")) {
-            return task.getTaskDifficulty().getColor() + task.getTaskDifficulty().getName();
-        }
-        if (params.equalsIgnoreCase("evacuable")) {
-            if (task.getAvailableEvacuationZone() != null) return "§a可撤离";
-            else return "§c无法撤离";
-        }
-        return "没做完呢";
     }
 }
